@@ -154,6 +154,8 @@ je_daoguang_reform_mine = {
 je_daoguang_reform_opium = {
 	icon = "gfx/interface/icons/goods_icons/opium.dds"
 	group = je_group_historical_content
+	scripted_button = support_shih_chin_pai_button
+	scripted_button = support_yen_chin_pai_button
 	immediate = {
 		ig:ig_petty_bourgeoisie = {
 			save_scope_as = petty_bourgeoisie_ig
