@@ -1,0 +1,5 @@
+﻿l_english:
+  concept_shih_chin_pai: "Shih-chin Faction"
+  concept_yen_chin_pai: "Yen-chin Faction"
+  concept_shih_chin_pai_desc: "The Shih-chin Faction advocates using domestic products to replace foreign opium in order to improve the trade deficit."
+  concept_yen_chin_pai_desc: "The Yen-chin Faction advocates for the destruction of opium to maintain social stability."
