@@ -70,9 +70,9 @@
   je_daoguang_reform_main_reason: "During the reign of the Daoguang Emperor, [ROOT.GetCountry.GetName] faced both internal strife and external threats. If we stand idly by, [ROOT.GetCountry.GetNameNoFlag] may have no chance of recovery.\n\nA good start is half the battle; by completing three key reform tasks, we can embrace this ever-changing era."
   je_daoguang_reform_main_complete_tt: "Complete the three tasks: #bold Transportation of Grain by Sea#!, #bold Crackdown on Opium#!, and #bold Mineral Resource Extraction#!."
   je_daoguang_reform_main_fail_tt: "Without completing the three reform tasks, the Daoguang Emperor passed away"
-  je_daoguang_reform_grain: "Emperor Daoguang: Transportation of Grain by Sea"
+  je_daoguang_reform_grain: "Emperor Daoguang: Transportation of Grain"
   je_daoguang_reform_grain_reason: "The Daoguang Emperor hoped to resolve the transportation issues of [GetGoods('grain').GetName] through maritime shipping to ensure the food supply for [concept_capital_state]."
-  je_daoguang_reform_opium: "Emperor Daoguang: Crackdown on Opium"
+  je_daoguang_reform_opium: "Emperor Daoguang: The Opium Issue"
   je_daoguang_reform_opium_reason: "Those in the mainland who consume [GetGoods('opium').GetName] shall be punished with death."
   je_daoguang_reform_opium_complete_tt: "As time goes on, [SCOPE.gsInterestGroup('petty_bourgeoisie_ig').GetLeader.GetCustom('GetUniversalFullName')] will inform you of the solution."
   je_daoguang_reform_mine: "Emperor Daoguang: Mineral Resource Extraction"
@@ -206,3 +206,7 @@
   je_reconquest_of_the_west_gansu_hui_rebellion_tt: "The Gansu Hui Revolt broke out."
   je_reconquest_of_the_west_yettesheher_destroyed_tt: "[SCOPE.sCountry('yettesheher_scope').GetName] does not exist"
   je_great_yuan_complete_ruler_tt: "We have found the descendants of Genghis Khan."
+  support_shih_chin_pai: "Support [concept_shih_chin_pai]"
+  support_yen_chin_pai: "Support [concept_yen_chin_pai]"
+  support_shih_chin_pai_desc: "Support the policies of [concept_shih_chin_pai], which aim to replace foreign opium with domestic products in order to improve the trade deficit."
+  support_yen_chin_pai_desc: "Support the policies of [concept_yen_chin_pai], which aim to destroy opium in order to maintain social stability."
