@@ -107,6 +107,7 @@
   moh_Yuan_2: "Yuan" # Ruan Yuan
   moh_Wu: "Wu"
   moh_Chongyao: "Chongyao"
+  moh_Naiji: "Naiji"
 
   moh_Jebtsundamba: "Jebtsundamba"
   moh_Luvsanchultimjigmed: "Luvsanchultimjigmed" #5th
