@@ -1,0 +1,5 @@
+﻿l_simp_chinese:
+  concept_shih_chin_pai: "弛禁派"
+  concept_yen_chin_pai: "严禁派"
+  concept_shih_chin_pai_desc: "弛禁派主张以土抵洋，以改善贸易逆差。"
+  concept_yen_chin_pai_desc: "严禁派主张销毁鸦片，以维护社会稳定。"
