@@ -73,7 +73,7 @@
   je_daoguang_reform_main_fail_tt: "在没有完成三项改革的情况下，道光皇帝驾崩"
   je_daoguang_reform_grain: "道光皇帝：漕粮海运"
   je_daoguang_reform_grain_reason: "道光皇帝希望通过海运来解决[GetGoods('grain').GetName]运输问题，以保证[concept_capital_state]的粮食供应。"
-  je_daoguang_reform_opium: "道光皇帝：查禁鸦片"
+  je_daoguang_reform_opium: "道光皇帝：鸦片问题"
   je_daoguang_reform_opium_reason: "“将内地吸食[GetGoods('opium').GetName]者俱罪死”"
   je_daoguang_reform_opium_complete_tt: "随着时间的推进，[SCOPE.gsInterestGroup('petty_bourgeoisie_ig').GetLeader.GetCustom('GetUniversalFullName')]会告诉你解决办法"
   je_daoguang_reform_mine: "道光皇帝：开采矿产"
@@ -207,3 +207,7 @@
   je_reconquest_of_the_west_gansu_hui_rebellion_tt: "甘肃回乱爆发"
   je_reconquest_of_the_west_yettesheher_destroyed_tt: "[SCOPE.sCountry('yettesheher_scope').GetName]不存在"
   je_great_yuan_complete_ruler_tt: "我们找到了成吉思汗近亲的后裔。"
+  support_shih_chin_pai: "支持[concept_shih_chin_pai]"
+  support_yen_chin_pai: "支持[concept_yen_chin_pai]"
+  support_shih_chin_pai_desc: "支持[concept_shih_chin_pai]的政策，旨在以土抵洋，以改善贸易逆差。"
+  support_yen_chin_pai_desc: "支持[concept_yen_chin_pai]的政策，旨在销毁鸦片，以维护社会稳定。"
