@@ -114,6 +114,7 @@
   moh_Yuan_2: "元" # Ruan Yuan
   moh_Wu: "伍"
   moh_Chongyao: "崇曜"
+  moh_Naiji: "乃济"
 
   moh_Jebtsundamba: "哲布尊丹巴"
   moh_Luvsanchultimjigmed: "罗布藏楚都木济克默特" #5th
