@@ -380,6 +380,7 @@ Changes:
 - New clique flags (align with Hearts of Iron IV).
 - Sexagenary cycle algorithm from Oriental Empires mod. Currently used for Wuxu Reform.
 - Made Xianfeng progress bar more intuitive.
+- New character: Xu Naiji.
 
 Fixes:
 
